--- a/GummiBearKingdom/GummiBearKingdom.csproj
+++ b/GummiBearKingdom/GummiBearKingdom.csproj
@@ -7,6 +7,11 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
     <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\" />
+    <Folder Include="Views\Home\" />
+    <Folder Include="Views\Products\" />
+    <Folder Include="Views\Shared\" />
   </ItemGroup>
 
   <ItemGroup>
