Add custom route to view all Reviews.

--- a/GummiBearKingdom/GummiBearKingdom.csproj
+++ b/GummiBearKingdom/GummiBearKingdom.csproj
@@ -15,6 +15,7 @@
     <Folder Include="wwwroot\css\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Models\Repositories\" />
+    <Folder Include="Views\Reviews\" />
   </ItemGroup>
 
   <ItemGroup>
