--- a/GummiBearKingdom/GummiBearKingdom.csproj
+++ b/GummiBearKingdom/GummiBearKingdom.csproj
@@ -16,6 +16,7 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Models\Repositories\" />
     <Folder Include="Views\Reviews\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
   <ItemGroup>
